# book-management

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bat  start.sh  tsconfig.json
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  errors.py
app/api/v1/routers/: books.py
app/core/: config.py  logging.py
app/domain/: models.py  schemas.py
app/services/: books.py  index.py
app/services/storage/: json_store.py
data/: books.json  meta.json
docker/: Dockerfile.ci
scripts/: dev.ps1  dev.sh  format.sh  lint.sh
tests/: conftest.py  test_books_api.py  test_books_service.py
