[project]
name = "json-books"
version = "0.1.0"
description = "FastAPI Book Management with JSON storage"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "PL", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
plugins = []

